syntax = "proto3";

option go_package = "/user";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message User {
  string id = 1;
  string username = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string status = 1;
  string key = 2;
}

message LogoutRequest {
  string username = 1;
}

message LogoutResponse {
  string status = 1;
}